# ti-radar-cli

./: .gitignore  LICENSE  PUBLISH_AUDIT.md  README.md  README_zh.md  agent-setup.md  pyproject.toml
skills/ti-radar/: SKILL.md
src/ti_radar/: __init__.py  cli.py
src/ti_radar/backends/: __init__.py  base.py  dca1000_udp.py  mock.py  rstd.py  studio_rstd.py
src/ti_radar/configs/: radar_profiles.yaml
src/ti_radar/core/: __init__.py  device.py  paths.py  profile.py  session.py  state.py
src/ti_radar/mmw/: rstd_dofile.m
src/ti_radar/raw/: __init__.py  radar_process.py
src/ti_radar/workflows/: __init__.py  studio_pipeline.py
tests/: test_cli_local.py
