[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-radar-cli"
version = "0.1.0"
description = "A reliability-first CLI and agent skill for TI mmWave radar capture with mmWave Studio, RSTD, and DCA1000."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ti-radar-cli contributors" }]
keywords = ["ti", "mmwave", "radar", "dca1000", "mmwave-studio", "rstd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
studio = ["pythonnet>=3.0"]
serial = ["pyserial>=3.5"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=8.0", "build>=1.2"]
all = ["pythonnet>=3.0", "pyserial>=3.5", "matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/Zhenyu98/ti-radar-cli"
Repository = "https://github.com/Zhenyu98/ti-radar-cli"
Issues = "https://github.com/Zhenyu98/ti-radar-cli/issues"
Documentation = "https://github.com/Zhenyu98/ti-radar-cli#readme"

[project.scripts]
ti-radar = "ti_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ti_radar = ["configs/*.yaml", "mmw/*.m"]
